--- a/src/style.css
+++ b/src/style.css
@@ -11,11 +11,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+}
+
+.body{
 }
 
 
 #c{
   width: 100%;
   height: 100%;
-  display: block;
 }
